fix: center household head column, remove horizontal scrollbar

--- a/Pal3_BarangayMS_Frontend/src/css/base-custom.css
+++ b/Pal3_BarangayMS_Frontend/src/css/base-custom.css
@@ -997,6 +997,14 @@
   margin-top: 100px;
 }
 
+.inquirytable_ctr > div {
+  overflow-x: hidden !important;
+}
+
+.rdt_Table {
+  overflow: hidden !important;
+}
+
 .rdt_TableHeadRow {
   font-weight: 600;
   margin-top: 10px;
